--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,6 @@
 <resources>
     <string name="app_name">TabLayoutViewPager</string>
+    <string name="batman">BATMAN</string>
+    <string name="iceman">ICEMAN</string>
+    <string name="spiderman">SPIDERMAN</string>
 </resources>
